--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -129,8 +129,8 @@
             </a>
             <span class="navbar-text d-none d-md-block">库存查询统计</span>
             <div class="navbar-nav ms-auto">
-                <a href="{{ url_for('module_logout', module='inventory') }}" class="btn btn-outline-light btn-sm">
-                    <i class="fas fa-sign-out-alt me-1"></i>退出
+                <a href="{{ url_for('index') }}" class="btn btn-outline-light btn-sm">
+                    <i class="fas fa-home me-1"></i>返回首页
                 </a>
             </div>
         </div>
