--- a/templates/packing_request.html
+++ b/templates/packing_request.html
@@ -125,8 +125,8 @@
             </a>
             <span class="navbar-text d-none d-md-block">返空装箱申请</span>
             <div class="navbar-nav ms-auto">
-                <a href="{{ url_for('module_logout', module='packing') }}" class="btn btn-outline-light btn-sm">
-                    <i class="fas fa-sign-out-alt me-1"></i>退出
+                <a href="{{ url_for('index') }}" class="btn btn-outline-light btn-sm">
+                    <i class="fas fa-home me-1"></i>返回首页
                 </a>
             </div>
         </div>
